fixed issue with projects not aligning

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ body {
 
 #home-section,
 #about-section {
-  background-color: rgba(24, 23, 23, 0.507);
+  background-color: rgba(24, 23, 23, 0.603);
 }
 
 nav {
@@ -299,7 +299,6 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   width: 100%;
   max-width: 400px;
   box-sizing: border-box;
@@ -307,7 +306,6 @@ h2 {
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0px 2px 2px rgba(67, 14, 212, 0.1);
-  margin-bottom: 2rem;
 }
 
 .project-item h3,
@@ -349,8 +347,7 @@ h4 {
 }
 
 .project-item img {
-  width: 95%;
-  max-width: 100%;
+  width: 100%;
   height: auto;
   border-radius: 8px;
   object-fit: cover;
@@ -386,6 +383,20 @@ h4 {
 .project-item .project-link:hover {
   transform: scale(1.05);
   background-color: #2276d6;
+}
+
+/* Flex properties for project item content */
+.project-item-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+/* Consistent height for project items */
+.project-item {
+  min-height: 500px; /* Adjust this value as needed */
 }
 
 #contact-section {
@@ -542,8 +553,7 @@ a[href^="tel"]:hover {
   }
 
   .project-item {
-    max-width: calc(50% - 1rem);
-    margin-bottom: 1rem;
+    flex: 1 1 45%;
   }
 
   .footer-row {
@@ -605,5 +615,8 @@ a[href^="tel"]:hover {
 
   .project-list {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .project-item {
+    flex: 1 1 30%;
   }
 }
